# zephyr-python

./: .gitignore  init_venv.sh  pyproject.toml
api_generator/: setup.py
api_generator/api_generator/: __init__.py  main.py
proto_builder/: pyproject.toml
proto_builder/proto_builder/: backend.py
protorpc/: .gitignore  setup.py
protorpc/protorpc/: __init__.py  api.py
protorpc/protorpc/cli/: __init__.py  callets_example.yaml  callsets.py  common_opts.py
protorpc/protorpc/connection/: __init__.py  cobs.py  tcp_connection.py  udp_connection.py
protorpc/protorpc/generator/: generator.py
protorpc/protorpc/util/: __init__.py
protorpcheader/: pyproject.toml  setup.py
rtosutils/: pyproject.toml  setup.py
rtosutils/rtosutils/: __init__.py  cli.py
subscriber/: pyproject.toml
subscriber/subscriber/: __init__.py  cli.py  client.py  shell.py  sysmsg.py  tui.py
systemrpc/: pyproject.toml  setup.py
systemrpc/systemrpc/: __init__.py  cli.py
testrpc/: pyproject.toml  setup.py
testrpc/testrpc/: cli.py
trace_tool/: pyproject.toml
trace_tool/trace_tool/: __init__.py  cli.py  ctf_config.py  ctf_parser.py  ext_events.py  fmt_types.py
tracemodule/: pyproject.toml
tracemodule/tracemodule/: __init__.py  trace_protorpc.py
