[project]
name = "rtosutils"
version = "0.1.0"
description = "Package for zephyr rtos status."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "betterproto[compiler]==2.0.0b6",
    "logging-tree>=1.10",
    "rich>=13.9.4",
]

[project.scripts]
rtosutils-cli = "rtosutils.cli:entrypoint"


[build-system]
requires = ["setuptools", "grpcio-tools", "betterproto[compiler]==2.0.0b6", "pyyaml"]
build-backend = "setuptools.build_meta"

