[project]
name = "rtosutils"
version = "0.1.0"
description = "Package for zephyr rtos status."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "betterproto[compiler]==2.0.0b6",
    "logging-tree>=1.10",
    "rich>=13.9.4",
]

[project.scripts]
rtosutils-cli = "rtosutils.cli:entrypoint"

[tool.proto_builder]
name = "rtosutils"
proto_file = "RtosUtilsRpc"
proto_mod = "rtosutils"
callset_name = "Callset"

[build-system]
requires = ["setuptools", "proto_builder", "betterproto[compiler]==2.0.0b6"]
build-backend = "proto_builder.backend"

[tool.uv.sources]
proto_builder = { path = "../proto_builder" }
