[project]
name = "subscriber"
version = "0.1.0"
description = "Package for zephyr subscriber client. ."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "click-repl>=0.3.0",
    "betterproto[compiler]==2.0.0b6",
    "logging-tree>=1.10",
    "rich>=13.9.4",
    "textual",
    "paho-mqtt",
]

[project.scripts]
subscriber = "subscriber.cli:entrypoint"
