[project]
name = "systemrpc"
version = "0.1.0"
description = "Package for systemrpc bindings and cli interface."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "betterproto[compiler]==2.0.0b6",
    "logging-tree>=1.10",
    "rich>=13.9.4",
]

[project.scripts]
systemrpc-cli = "systemrpc.cli:entrypoint"


[build-system]
requires = ["setuptools", "grpcio-tools", "betterproto[compiler]==2.0.0b6"]
build-backend = "setuptools.build_meta"
